--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,135 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --bg: #222;
+  --text:#f5f5f5;
+  --text-secondary: #a7a7a7;
+  --text-darker: #272727;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "PP Neue Montreal";
+  font-weight: 200;
+  font-style: normal;
+  src: url(./fonts/PPNeueMontreal-Thin.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "PP Neue Montreal";
+  font-weight: 300;
+  font-style: normal;
+  src: url(./fonts/PPNeueMontreal-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "PP Neue Montreal";
+  font-weight: 400;
+  font-style: normal;
+  src: url(./fonts/PPNeueMontreal-Book.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "PP Neue Montreal";
+  font-weight: 500;
+  font-style: normal;
+  src: url(./fonts/PPNeueMontreal-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "PP Neue Montreal";
+  font-weight: 600;
+  font-style: normal;
+  src: url(./fonts/PPNeueMontreal-Medium.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "PP Neue Montreal";
+  font-weight: 700;
+  font-style: normal;
+  src: url(./fonts/PPNeueMontreal-Bold.ttf) format("truetype");
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "PP Neue Montreal";
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg);
+  color: var(--text);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+  padding: 12em 2em 4em 2em;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+h1 {
+  color: var(--text);
+  font-size: 64px;
+  font-weight: 500;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+}
+
+h2 {
+  color: var(--text);
+  font-size: 42px;
+  font-weight: 600;
+  line-height: 110%;
+  letter-spacing: -0.01em;
+}
+
+h3 {
+  color: var(--text);
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: -0.005em;
+}
+
+p {
+  color: var(--text-secondary);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 125%;
+  letter-spacing: -0.0025em;
 }
 
 a {
-  color: inherit;
+  color: var(--text);
   text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 125%;
+  letter-spacing: -0.0025em;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (max-width: 900px) {
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  p,
+  a {
+    font-size: 14px;
   }
 }
